# xv6-educational

./: Makefile  events.db  ingest_from_stream.py
gui/MainGUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
kernel/: cslog.c  defs.h  ringbuf.c  ringbuf.h  spinlock.h  uartev.d
user/: csexport.c  init.c  user.h
